In app.json, updated the expo:name & slug from 'trelliss-zone' to 'trelliss-reviews'. Changes were made in app.json & homeStack.js in an attempt to create multipage navigation (unsuccessfully).

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "trelliss-zone",
-    "slug": "trelliss-zone",
+    "name": "trelliss-reviews",
+    "slug": "trelliss-reviews",
     "platforms": [
       "ios",
       "android",
